# todocs

./: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  app.doql.less  goal.yaml  index.html  pyproject.toml
docs/: README.md
examples/: article_sections_demo.py  custom_analysis.py  organization_health_report.py  scan_org.py  scan_single.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  mermaid.export  project.toon.yaml  prompt.txt  validation.toon.yaml
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_integration.py  test_todocs.py
todocs/: __init__.py  core.py
todocs/cli/: __init__.py
todocs/extractors/: metadata.py  readme_parser.py
todocs/generators/: comparison.py
